fixing text-wrapping on IOS

--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -288,7 +288,7 @@
 				margin-top: 8px;
 
 				.add-icons {
-					gap: 6px;
+					gap: 2px;
 
 					svg {
 						width: 18px;
@@ -296,7 +296,7 @@
 					}
 					h6 {
 						width: 81px;
-						font-size: 0.75rem;
+						font-size: 0.675rem;
 					}
 				}
 			}
